# cremniy

./: .clang-format  .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  CONTRIBUTING_ru.md  PKGBUILD  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md  cremniy.desktop  dcr.toml  main.cpp
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
source/backend/: Cargo.toml  tauri.conf.json
source/backend/.cargo/: config.toml
source/backend/capabilities/: default.json
source/backend/icons/: icon.icns
source/backend/src/: binary_analysis.rs  connections.rs  disassembly.rs  git.rs  lib.rs  mcp.rs  panes.rs  process.rs  radare2.rs  search.rs  serial.rs  sftp.rs  shellcode.rs  ssh.rs  terminal.rs  win_command.rs
src/: .editorconfig  CMakeLists.txt  config.h  config.h.in  main.cpp
src/BuildSystem/: BuildConfig.cpp  BuildConfig.h  BuildManager.cpp  BuildManager.h  BuildSetupDialog.cpp  BuildSetupDialog.h  OutputPanel.cpp  OutputPanel.h
src/Modules/References/AsciiChars/: asciicharsref.cpp  asciicharsref.h
src/Modules/References/KeyboardScancodes/: CMakeLists.txt  keyboardscancodesref.cpp  keyboardscancodesref.h  keyboardscancodevizwidget.cpp
src/Modules/Tabs/Binary/: binarytab.cpp  binarytab.h  formatpage.h
src/Modules/Tabs/CodeEditor/: CMakeLists.txt  codeeditortab.cpp  codeeditortab.h
src/Modules/Tabs/Disassembler/: disassemblertab.h
src/Modules/Tabs/STM32Pinout/: stm32pinout.cpp  stm32pinout.h
src/Modules/Windows/DataConverter/: dataconverterdialog.cpp
src/Modules/Windows/ShellCodeGenerator/: CMakeLists.txt  shellcodeengine.cpp  shellcodeengine.h  shellcodegeneratordialog.cpp  shellcodegeneratordialog.h
src/ToolTabs/Binary/: binarytab.cpp  binarytab.h  formatpage.cpp  formatpage.h
src/ToolTabs/Binary/QHexView/: CMakeLists.txt
src/ToolTabs/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/ToolTabs/Disassembler/: disassemblertab.cpp  disassemblertab.h  disassemblerworker.cpp  disassemblerworker.h
src/ToolTabs/Disassembler/disasm/: disasmsyntaxdelegate.cpp  disasmsyntaxdelegate.h  disasmtexthighlighter.cpp  disasmtexthighlighter.h
src/ToolTabs/always/Binary/: binarytab.cpp  binarytab.h  formatpage.cpp  formatpage.h
src/ToolTabs/always/CodeEditor/: codeeditortab.cpp  codeeditortab.h
src/ToolTabs/other/Disassembler/: disassemblertab.cpp  disassemblertab.h
src/Tools/References/AsciiChars/: asciicharsref.cpp
src/Tools/Tabs/Binary/: binarytab.cpp
src/Tools/Tabs/CodeEditor/: codeeditortab.cpp
src/Tools/Tabs/Disassembler/: disassemblertab.cpp
src/Tools/Tabs/STM32Pinout/: stm32pinout.cpp  stm32pinout.h
src/Tools/Windows/DataConverter/: dataconverterdialog.cpp
src/Tools/Windows/ReverseCalculator/: reversecalculatordialog.cpp
src/Tools/Windows/ShellCodeGenerator/: shellcodegeneratordialog.cpp
src/app/IDEWindow/: idewindow.cpp  idewindow.h
src/app/WelcomeWindow/: welcomeform.cpp  welcomeform.h
src/app/WelcomeWindow/CreateProjectPage/: create_project_page.cpp  create_project_page.h
src/app/WelcomeWindow/ProjectCard/: project_card.cpp  project_card.h
src/app/WelcomeWindow/RecentProjectsPage/: recent_projects_page.cpp  recent_projects_page.h
src/app/WelcomeWindow/WelcomeForm/: welcome_form.cpp  welcome_form.h
src/components/codeeditor/: CMakeLists.txt
src/components/codeeditor/src/: QCodeEditor.cpp
src/components/hexview/src/: qhexview.cpp
src/core/: FileDataBuffer.cpp  FileDataBuffer.h  LineIndex.cpp  ToolStatusState.h  ToolTab.h  ToolTabFactory.cpp  ToolTabFactory.h  ToolsRegistry.cpp  ToolsRegistry.h  UTF8Decoder.cpp  UTF8Decoder.h
src/core/file/: FileDataBuffer.cpp  filemanager.cpp  filemanager.h
src/core/git/: gitmanager.h
src/core/icons/: iconprovider.cpp  iconprovider.h
src/core/locale/: LanguageManager.h
src/core/modules/: ReferenceBase.h  TabBase.h
src/core/project/: projects_history_manager.cpp  projects_history_manager.h  projectshistorymanager.h
src/core/settings/: appsettings.cpp  appsettings.h  exclusionfilterproxymodel.cpp  exclusionfilterproxymodel.h
src/dialogs/: dataconverterdialog.cpp  dataconverterdialog.h  filecreatedialog.cpp  keyboardscancodesdialog.cpp  keyboardscancodesdialog.h  projectsearchdialog.cpp  projectsearchdialog.h  projectsearchresultdelegate.cpp  projectsearchresultdelegate.h  reversecalculatordialog.cpp  reversecalculatordialog.h  settingsdialog.cpp  settingsdialog.h
src/libs/CodeEditor/: CMakeLists.txt
src/libs/HexEditor/: CMakeLists.txt
src/libs/HexEditor/src/: qhexview.cpp
src/libs/cremniy-codeeditor/: CMakeLists.txt
src/resources/: cremniy_res.qrc  phoicons.qrc
src/resources/icons/phoicons/: README.md  index.theme
src/resources/locale/translations/: app_en.ts  app_ru.ts
src/resources/styles/: base.qss  catppuccin.qss  clear.qss  darcula.qss  dark.qss  light.qss  lunadark.qss  nord.qss  pastel.qss  style.qss  tokyonight.qss  welcome.qss
src/tests/: test_projectsearchengine.cpp
src/ui/: filestabwidget.cpp  filestabwidget.h  toolstabwidget.cpp  toolstabwidget.h
src/ui/FilesTabWidget/: filestabwidget.cpp  filestabwidget.h
src/ui/ToolsTabWidget/: ToolTab.h  toolstabwidget.cpp  toolstabwidget.h
src/utils/: appsettings.cpp  appsettings.h  filecontext.h  filemanager.cpp  filemanager.h  iconprovider.cpp  projectshistorymanager.cpp  projectshistorymanager.h  themecolors.cpp  themecolors.h  themeservice.cpp  themeservice.h
src/utils/locale/: LanguageManager.cpp  LanguageManager.h
src/utils/projectsearch/: projectsearchengine.cpp  projectsearchengine.h  projectsearchworker.cpp  projectsearchworker.h
src/widgets/: CustomCodeEditor.cpp  CustomCodeEditor.h  LineNumberArea.cpp  clickablelineedit.h  codeeditortab.h  filestabwidget.cpp  filestabwidget.h  filetab.cpp  filetab.h  filetreepanel.cpp  filetreepanel.h  hexviewtab.cpp  hexviewtab.h  keyboardscancodevizwidget.cpp  keyboardscancodevizwidget.h  tooltab.cpp  tooltabwidget.cpp  tooltabwidget.h
src/widgets/terminal/: terminalwidget.cpp  terminalwidget.h  terminalwidgets.cpp
src/widgets/terminal/Kodoterm/: .gitignore  CMakeLists.txt  (+6 more)
(+445 files in other folders)
