[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tempfile = "3.27.0"
# Embedded disassembler — no external objdump required.
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "intel", "gas", "fast_fmt"] }
goblin = "0.9"
# Real PTY (ConPTY on Windows 10+, POSIX PTY elsewhere).
portable-pty = "0.8"
# Workspace content search: ripgrep's walker (.gitignore + globs) + regex.
ignore = "0.4"
regex = "1"
# Tiny HTTP server hosting the in-app MCP endpoint (agent control).
tiny_http = "0.12"
# RGBA→PNG encoding for the MCP `screenshot` tool.
image = { version = "0.25", default-features = false, features = ["png"] }
# Win32 GDI (PrintWindow) for capturing window content even when hidden/occluded.
# Pinned to the same major.minor Tauri resolves so `WebviewWindow::hwnd()` returns
# a matching `HWND` type (tauri 2.10 → windows 0.61).
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Storage_Xps"] }
