[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tempfile = "3.27.0"
# Embedded disassembler — no external objdump required.
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "intel", "gas", "fast_fmt"] }
goblin = "0.9"
# Real PTY (ConPTY on Windows 10+, POSIX PTY elsewhere).
portable-pty = "0.8"
# Cross-platform serial I/O (talks to OS serial APIs directly, no external tool).
serialport = "4.9"
# Pure-Rust SSH client (no system libssh / OpenSSL). Runs on the tokio runtime
# Tauri already provides via `tauri::async_runtime`.
russh = "0.45"
# SFTP (file transfer) over a russh channel. 2.x only needs the channel's
# byte-stream (AsyncRead+AsyncWrite), so it's decoupled from the russh version.
russh-sftp = "2.3"
# Handler trait in russh 0.45 is `#[async_trait]`; the macro isn't re-exported.
async-trait = "0.1"
# `mpsc` + `select!` for the SSH read/write loop. Tauri runs on tokio, but
# doesn't re-export these; this pulls in only the sync/macros surface (the
# runtime itself is shared with Tauri).
tokio = { version = "1", features = ["sync", "macros"] }
# Workspace content search: ripgrep's walker (.gitignore + globs) + regex.
ignore = "0.4"
regex = "1"
# Tiny HTTP server hosting the in-app MCP endpoint (agent control).
tiny_http = "0.12"
